tests/ui/parser/omitted-arg-in-item-fn.rs
fn foo(x) { //~ ERROR expected one of `:`, `@`, or `|`, found `)`
}

fn main() {}

// ferrocene-annotations: fls_qcb1n9c0e5hz
// Functions
